Feat: demo mode, data ingestion, Swagger, unit tests, and frontend deploy config
- Wire up TikTok Research API calls with OAuth2 client credentials
- Add video deduplication and retry/backoff for rate limits
- Add demo profile (H2 + mock data seeder) for zero-setup portfolio demos
- Add demo login endpoint (POST /api/v1/auth/demo)
- Add Swagger/OpenAPI docs at /swagger-ui.html
- Add POST /api/v1/ingest/trigger admin endpoint
- Move secrets to environment variables
- Add 23 unit tests for TrendService, PerformanceAnalyticsService, RecommendationService
- Add Dockerfile for Render deployment
- Configure frontend for production API URL via VITE_API_URL
- Add global CORS config for deployed frontend
- Add "Try Demo" button on landing page

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>